k8s/handy-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: handy
  labels:
    name: handy
