k8s/backend.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: handy-be
  namespace: handy
  labels:
    app: handy-be
spec:
  selector:
    matchLabels:
      app: handy-be
      tier: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: handy-be
        tier: backend
    spec:
      containers:
        - name: handy-be
          image: 0xsera/handy-be:latest
          imagePullPolicy: Always
          command: ["/bin/sh"]
          args: ["-c", "npm run migrate:deploy && npm run start:prod"]
          ports:
            - protocol: TCP
              containerPort: 8000
          resources:
            requests:
              memory: 250Mi
              cpu: 250m
            limits:
              memory: 500Mi
              cpu: 500m
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 8000
          #   successThreshold: 1
          #   failureThreshold: 3
          #   initialDelaySeconds: 30
          #   periodSeconds: 30
          #   timeoutSeconds: 1
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 8000
          #   successThreshold: 1
          #   failureThreshold: 3
          #   initialDelaySeconds: 45
          #   periodSeconds: 30
          #   timeoutSeconds: 1

---
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: handy-be
  labels:
    app: handy-be
spec:
  selector:
    app: handy-be
    tier: backend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      # nodePort: 30003
