k8s/frontend.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: handy-fe
  namespace: handy
  labels:
    app: handy-fe
spec:
  selector:
    matchLabels:
      app: handy-fe
      tier: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: handy-fe
        tier: frontend
    spec:
      containers:
        - name: handy-fe
          image: 0xsera/handy-fe:latest
          imagePullPolicy: Always
          ports:
            - protocol: TCP
              containerPort: 80
          resources:
            requests:
              memory: 250Mi
              cpu: 250m
            limits:
              memory: 500Mi
              cpu: 500m
          readinessProbe:
            httpGet:
              path: /
              port: 80
            successThreshold: 1
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /
              port: 80
            successThreshold: 1
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 1

---
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: handy-fe
  labels:
    app: handy-fe
spec:
  selector:
    app: handy-fe
    tier: frontend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      # nodePort: 30002
